--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,5 +6,20 @@
       "trace.server": "verbose",
       "filetypes": ["go"]
     }
-  }
+  },
+  "pylsp.builtin.installExtrasArgs": [
+    "flake8",
+    "mccabe",
+    "pycodestyle",
+    "pydocstyle",
+    "pyflakes",
+    "pylint",
+    "rope"
+  ],
+  "python.formatting.provider": "black",
+  "python.formatting.blackPath": "~/.config/coc/extensions/@yaegassy/coc-pylsp-data/pylsp/venv/bin/black",
+  "coc.preferences.formatOnSaveFiletypes": ["python"],
+  "pylsp.builtin.enableInstallPylsIsort": true,
+  "pylsp.builtin.enableInstallPythonLspRuff": true,
+  "pylsp.builtin.enableInstallPythonLspBlack": true
 }
